src/test/ui/argument-suggestions/invalid_arguments.stderr
error[E0308]: arguments to this function are incorrect
  --> $DIR/invalid_arguments.rs:13:3
   |
LL |   one_arg(1.0);
   |   ^^^^^^^^---^
   |           |
   |           expected `i32`, found `{float}`
   |
note: function defined here
  --> $DIR/invalid_arguments.rs:5:4
   |
LL | fn one_arg(_a: i32) {}
   |    ^^^^^^^ -------
help: provide an argument of the correct type
   |
LL |   one_arg({i32});
   |   ^^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/invalid_arguments.rs:16:3
   |
LL |   two_arg_same(1, "");
   |   ^^^^^^^^^^^^^-^^^^^
   |                |
   |                expected `i32`, found `i32`
   |
note: function defined here
  --> $DIR/invalid_arguments.rs:6:4
   |
LL | fn two_arg_same(_a: i32, _b: i32) {}
   |    ^^^^^^^^^^^^ -------  -------
help: provide an argument of the correct type
   |
LL |   two_arg_same(1, {i32});
   |   ^^^^^^^^^^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/invalid_arguments.rs:17:3
   |
LL |   two_arg_same("", 1);
   |   ^^^^^^^^^^^^^--^^^^
   |                |
   |                expected `i32`, found `&'static str`
   |
note: function defined here
  --> $DIR/invalid_arguments.rs:6:4
   |
LL | fn two_arg_same(_a: i32, _b: i32) {}
   |    ^^^^^^^^^^^^ -------  -------
help: provide an argument of the correct type
   |
LL |   two_arg_same({i32}, 1);
   |   ^^^^^^^^^^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/invalid_arguments.rs:18:3
   |
LL |   two_arg_same("", "");
   |   ^^^^^^^^^^^^^--^^^^^
   |                |
   |                expected `i32`, found `&'static str`
   |                expected `i32`, found `&'static str`
   |
note: function defined here
  --> $DIR/invalid_arguments.rs:6:4
   |
LL | fn two_arg_same(_a: i32, _b: i32) {}
   |    ^^^^^^^^^^^^ -------  -------
help: did you mean
   |
LL |   two_arg_same({i32}, {i32});
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/invalid_arguments.rs:19:3
   |
LL |   two_arg_diff(1, "");
   |   ^^^^^^^^^^^^^-^^^^^
   |                |
   |                expected `f32`, found `i32`
   |
note: function defined here
  --> $DIR/invalid_arguments.rs:7:4
   |
LL | fn two_arg_diff(_a: i32, _b: f32) {}
   |    ^^^^^^^^^^^^ -------  -------
help: provide an argument of the correct type
   |
LL |   two_arg_diff(1, {f32});
   |   ^^^^^^^^^^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/invalid_arguments.rs:20:3
   |
LL |   two_arg_diff("", 1.0);
   |   ^^^^^^^^^^^^^--^^^^^^
   |                |
   |                expected `i32`, found `&'static str`
   |
note: function defined here
  --> $DIR/invalid_arguments.rs:7:4
   |
LL | fn two_arg_diff(_a: i32, _b: f32) {}
   |    ^^^^^^^^^^^^ -------  -------
help: provide an argument of the correct type
   |
LL |   two_arg_diff({i32}, 1.0);
   |   ^^^^^^^^^^^^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/invalid_arguments.rs:21:3
   |
LL |   two_arg_diff("", "");
   |   ^^^^^^^^^^^^^--^^^^^
   |                |
   |                expected `i32`, found `&'static str`
   |                expected `f32`, found `&'static str`
   |
note: function defined here
  --> $DIR/invalid_arguments.rs:7:4
   |
LL | fn two_arg_diff(_a: i32, _b: f32) {}
   |    ^^^^^^^^^^^^ -------  -------
help: did you mean
   |
LL |   two_arg_diff({i32}, {f32});
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/invalid_arguments.rs:24:3
   |
LL |   three_arg_diff(X{}, 1.0, "");
   |   ^^^^^^^^^^^^^^^---^^^^^^^^^^
   |                  |
   |                  expected `i32`, found `X`
   |
note: function defined here
  --> $DIR/invalid_arguments.rs:8:4
   |
LL | fn three_arg_diff(_a: i32, _b: f32, _c: &str) {}
   |    ^^^^^^^^^^^^^^ -------  -------  --------
help: provide an argument of the correct type
   |
LL |   three_arg_diff({i32}, 1.0, "");
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/invalid_arguments.rs:25:3
   |
LL |   three_arg_diff(1, X {}, "");
   |   ^^^^^^^^^^^^^^^-^^^^^^^^^^^
   |                  |
   |                  expected `f32`, found `i32`
   |
note: function defined here
  --> $DIR/invalid_arguments.rs:8:4
   |
LL | fn three_arg_diff(_a: i32, _b: f32, _c: &str) {}
   |    ^^^^^^^^^^^^^^ -------  -------  --------
help: provide an argument of the correct type
   |
LL |   three_arg_diff(1, {f32}, "");
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/invalid_arguments.rs:26:3
   |
LL |   three_arg_diff(1, 1.0, X {});
   |   ^^^^^^^^^^^^^^^-^^^^^^^^^^^^
   |                  |
   |                  expected `&str`, found `i32`
   |
note: function defined here
  --> $DIR/invalid_arguments.rs:8:4
   |
LL | fn three_arg_diff(_a: i32, _b: f32, _c: &str) {}
   |    ^^^^^^^^^^^^^^ -------  -------  --------
help: provide an argument of the correct type
   |
LL |   three_arg_diff(1, 1.0, {&str});
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/invalid_arguments.rs:28:3
   |
LL |   three_arg_diff(X {}, X {}, "");
   |   ^^^^^^^^^^^^^^^----^^^^^^^^^^^
   |                  |
   |                  expected `i32`, found `X`
   |                  expected `f32`, found `X`
   |
note: function defined here
  --> $DIR/invalid_arguments.rs:8:4
   |
LL | fn three_arg_diff(_a: i32, _b: f32, _c: &str) {}
   |    ^^^^^^^^^^^^^^ -------  -------  --------
help: did you mean
   |
LL |   three_arg_diff({i32}, {f32}, "");
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/invalid_arguments.rs:29:3
   |
LL |   three_arg_diff(X {}, 1.0, X {});
   |   ^^^^^^^^^^^^^^^----^^^^^^^^^^^^
   |                  |
   |                  expected `i32`, found `X`
   |                  expected `&str`, found `X`
   |
note: function defined here
  --> $DIR/invalid_arguments.rs:8:4
   |
LL | fn three_arg_diff(_a: i32, _b: f32, _c: &str) {}
   |    ^^^^^^^^^^^^^^ -------  -------  --------
help: did you mean
   |
LL |   three_arg_diff({i32}, 1.0, {&str});
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/invalid_arguments.rs:30:3
   |
LL |   three_arg_diff(1, X {}, X {});
   |   ^^^^^^^^^^^^^^^-^^^^^^^^^^^^^
   |                  |
   |                  expected `f32`, found `i32`
   |                  expected `&str`, found `i32`
   |
note: function defined here
  --> $DIR/invalid_arguments.rs:8:4
   |
LL | fn three_arg_diff(_a: i32, _b: f32, _c: &str) {}
   |    ^^^^^^^^^^^^^^ -------  -------  --------
help: did you mean
   |
LL |   three_arg_diff(1, {f32}, {&str});
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/invalid_arguments.rs:32:3
   |
LL |   three_arg_diff(X {}, X {}, X {});
   |   ^^^^^^^^^^^^^^^----^^^^^^^^^^^^^
   |                  |
   |                  expected `i32`, found `X`
   |                  expected `f32`, found `X`
   |                  expected `&str`, found `X`
   |
note: function defined here
  --> $DIR/invalid_arguments.rs:8:4
   |
LL | fn three_arg_diff(_a: i32, _b: f32, _c: &str) {}
   |    ^^^^^^^^^^^^^^ -------  -------  --------
help: did you mean
   |
LL |   three_arg_diff({i32}, {f32}, {&str});
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/invalid_arguments.rs:34:3
   |
LL |   three_arg_repeat(X {}, 1, "");
   |   ^^^^^^^^^^^^^^^^^----^^^^^^^^
   |                    |
   |                    expected `i32`, found `X`
   |
note: function defined here
  --> $DIR/invalid_arguments.rs:9:4
   |
LL | fn three_arg_repeat(_a: i32, _b: i32, _c: &str) {}
   |    ^^^^^^^^^^^^^^^^ -------  -------  --------
help: provide an argument of the correct type
   |
LL |   three_arg_repeat({i32}, 1, "");
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/invalid_arguments.rs:35:3
   |
LL |   three_arg_repeat(1, X {}, "");
   |   ^^^^^^^^^^^^^^^^^-^^^^^^^^^^^
   |                    |
   |                    expected `i32`, found `i32`
   |
note: function defined here
  --> $DIR/invalid_arguments.rs:9:4
   |
LL | fn three_arg_repeat(_a: i32, _b: i32, _c: &str) {}
   |    ^^^^^^^^^^^^^^^^ -------  -------  --------
help: provide an argument of the correct type
   |
LL |   three_arg_repeat(1, {i32}, "");
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/invalid_arguments.rs:36:3
   |
LL |   three_arg_repeat(1, 1, X {});
   |   ^^^^^^^^^^^^^^^^^-^^^^^^^^^^
   |                    |
   |                    expected `&str`, found `i32`
   |
note: function defined here
  --> $DIR/invalid_arguments.rs:9:4
   |
LL | fn three_arg_repeat(_a: i32, _b: i32, _c: &str) {}
   |    ^^^^^^^^^^^^^^^^ -------  -------  --------
help: provide an argument of the correct type
   |
LL |   three_arg_repeat(1, 1, {&str});
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/invalid_arguments.rs:38:3
   |
LL |   three_arg_repeat(X {}, X {}, "");
   |   ^^^^^^^^^^^^^^^^^----^^^^^^^^^^^
   |                    |
   |                    expected `i32`, found `X`
   |                    expected `i32`, found `X`
   |
note: function defined here
  --> $DIR/invalid_arguments.rs:9:4
   |
LL | fn three_arg_repeat(_a: i32, _b: i32, _c: &str) {}
   |    ^^^^^^^^^^^^^^^^ -------  -------  --------
help: did you mean
   |
LL |   three_arg_repeat({i32}, {i32}, "");
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/invalid_arguments.rs:39:3
   |
LL |   three_arg_repeat(X {}, 1, X {});
   |   ^^^^^^^^^^^^^^^^^----^^^^^^^^^^
   |                    |
   |                    expected `i32`, found `X`
   |                    expected `&str`, found `X`
   |
note: function defined here
  --> $DIR/invalid_arguments.rs:9:4
   |
LL | fn three_arg_repeat(_a: i32, _b: i32, _c: &str) {}
   |    ^^^^^^^^^^^^^^^^ -------  -------  --------
help: did you mean
   |
LL |   three_arg_repeat({i32}, 1, {&str});
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/invalid_arguments.rs:40:3
   |
LL |   three_arg_repeat(1, X {}, X{});
   |   ^^^^^^^^^^^^^^^^^-^^^^^^^^^^^^
   |                    |
   |                    expected `i32`, found `i32`
   |                    expected `&str`, found `i32`
   |
note: function defined here
  --> $DIR/invalid_arguments.rs:9:4
   |
LL | fn three_arg_repeat(_a: i32, _b: i32, _c: &str) {}
   |    ^^^^^^^^^^^^^^^^ -------  -------  --------
help: did you mean
   |
LL |   three_arg_repeat(1, {i32}, {&str});
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/invalid_arguments.rs:42:3
   |
LL |   three_arg_repeat(X {}, X {}, X {});
   |   ^^^^^^^^^^^^^^^^^----^^^^^^^^^^^^^
   |                    |
   |                    expected `i32`, found `X`
   |                    expected `i32`, found `X`
   |                    expected `&str`, found `X`
   |
note: function defined here
  --> $DIR/invalid_arguments.rs:9:4
   |
LL | fn three_arg_repeat(_a: i32, _b: i32, _c: &str) {}
   |    ^^^^^^^^^^^^^^^^ -------  -------  --------
help: did you mean
   |
LL |   three_arg_repeat({i32}, {i32}, {&str});
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 21 previous errors

For more information about this error, try `rustc --explain E0308`.
